[gd_scene load_steps=2 format=3 uid="uid://dihrcf515sxka"]

[ext_resource type="Script" uid="uid://bkambsqo0mvv3" path="res://assets/ui/multiplayer/multiplayer_ui.gd" id="1_luirv"]

[node name="MultiplayerUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_luirv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -33.0
offset_right = 22.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="HostButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Host"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(220, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Join"

[node name="IpLine" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
